@@ -1,0 +1,2 @@
+prereq: test -e sys-copy_file_range
+prog: sys-copy_file_range
