@@ -41,6 +41,7 @@ To see details of a given bug, visit
 where XXXXXX is the bug number as listed below.
 
 406561  mcinfcallWSRU gdbserver_test fails on ppc64
+407218  Add support for the copy_file_range syscall
 n-i-bz  Fix minor one time leaks in dhat.
 n-i-bz  Add --run-cxx-freeres=no in outer args to avoid inner crashes.
 
